--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.0"
+    "styled-components": "^5.3.0",
+    "styled-icons": "^10.37.0"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
+    "@types/styled-components": "^5.1.12",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "4.3.5"
